# viasyncworker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  codecoverage.sh
core/: CMakeLists.txt
core/src/: viduplexqueue.cpp
core/src/inc/: iviasyncworker.hpp  ividuplexqueue.hpp  ivisubscriber.hpp  viasyncworker.hpp  viduplexqueue.hpp
tests/: tst_viasyncworker.cpp  tst_viduplexqueue.cpp
tests/main/: main.cpp
tests/mock/: visubscribermock.hpp
